choose Creative Commons 0 License. Intention: This website & repository is an international notebook for making multisensory metaverses & art.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "art-making"
   ],
   "author": "Redbeak Studio",
-  "license": "UNLICENSED",
+  "license": "Creative Commons CC0 Public Domain Dedication",
   "bugs": {
     "url": "https://github.com/redbeakstudio/quartermoonnights/issues"
   },
